Add basic HTML elements for the sidebar

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="styles/modern-normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <aside class="sidebar">
+      <div class="logobar">
+        <img src="assets/images/odin-lined.png" alt="Odin Logo" />
+        <h1 class="logo-text">ODIN</h1>
+      </div>
+      <footer class="credit">Photo by Halie west on Unsplash</footer>
+    </aside>
+  </body>
 </html>
