Add links to credit footer on sidebar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <img src="assets/images/odin-lined.png" alt="Odin Logo" />
         <h1 class="logo-text">ODIN</h1>
       </div>
-      <footer class="credit">Photo by Halie west on Unsplash</footer>
+      <footer class="credit">
+        Photo by
+        <a href="https://haliewestphotography.com/">Halie West</a>
+        on
+        <a href="https://unsplash.com/">Unsplash</a>
+      </footer>
     </aside>
   </body>
 </html>
