Improve alt text for logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <aside class="sidebar">
       <div class="logobar">
-        <img src="assets/images/odin-lined.png" alt="Odin Logo" />
+        <img src="assets/images/odin-lined.png" alt="Odin Project Logo" />
         <h1 class="logo-text">ODIN</h1>
       </div>
       <footer class="credit">
