--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <aside class="sidebar">
-      <div class="logobar">
+      <div class="logo-container">
         <img src="assets/images/odin-lined.png" alt="Odin Project Logo" />
         <h1 class="logo-text">ODIN</h1>
       </div>
