--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>You <i>know</i> you want to.</h2>
       </header>
       <form>
-        <div class="signup-info">
+        <div class="form-inputs">
           <h2>Let's do this!</h2>
           <label for="first_name">FIRST NAME</label>
           <input type="text" name="first_name" id="first_name" />
