--- a/index.html
+++ b/index.html
@@ -32,24 +32,30 @@
         <h2>You <i>know</i> you want to.</h2>
       </header>
       <form>
-        <div class="form-inputs">
+        <div class="form-input-container">
           <h2>Let's do this!</h2>
-          <label for="first_name">FIRST NAME</label>
-          <input type="text" name="first_name" id="first_name" />
-          <label for="last_name">LAST NAME</label>
-          <input type="text" name="last_name" id="last_name" />
-          <label for="email">EMAIL</label>
-          <input type="email" name="email" id="email" />
-          <label for="phone_number">PHONE NUMBER</label>
-          <input type="tel" name="phone_number" id="phone_number" />
-          <label for="password">PASSWORD</label>
-          <input type="password" name="password" id="password" />
-          <label for="confirm_password">CONFIRM PASSWORD</label>
-          <input
-            type="password"
-            name="confirm_password"
-            id="confirm_password"
-          />
+          <div class="form-inputs">
+            <div class="left-inputs">
+              <label for="first_name">FIRST NAME</label>
+              <input type="text" name="first_name" id="first_name" />
+              <label for="email">EMAIL</label>
+              <input type="email" name="email" id="email" />
+              <label for="password">PASSWORD</label>
+              <input type="password" name="password" id="password" />
+            </div>
+            <div class="right-inputs">
+              <label for="last_name">LAST NAME</label>
+              <input type="text" name="last_name" id="last_name" />
+              <label for="phone_number">PHONE NUMBER</label>
+              <input type="tel" name="phone_number" id="phone_number" />
+              <label for="confirm_password">CONFIRM PASSWORD</label>
+              <input
+                type="password"
+                name="confirm_password"
+                id="confirm_password"
+              />
+            </div>
+          </div>
         </div>
         <div class="form-actions">
           <button type="submit">Create Account</button>
