--- a/index.html
+++ b/index.html
@@ -37,22 +37,54 @@
           <div class="form-inputs">
             <div class="left-inputs">
               <label for="first_name">FIRST NAME</label>
-              <input type="text" name="first_name" id="first_name" />
+              <input
+                type="text"
+                name="first_name"
+                id="first_name"
+                required
+                tabindex="1"
+              />
               <label for="email">EMAIL</label>
-              <input type="email" name="email" id="email" />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                required
+                tabindex="3"
+              />
               <label for="password">PASSWORD</label>
-              <input type="password" name="password" id="password" />
+              <input
+                type="password"
+                name="password"
+                id="password"
+                required
+                tabindex="5"
+              />
             </div>
             <div class="right-inputs">
               <label for="last_name">LAST NAME</label>
-              <input type="text" name="last_name" id="last_name" />
+              <input
+                type="text"
+                name="last_name"
+                id="last_name"
+                required
+                tabindex="2"
+              />
               <label for="phone_number">PHONE NUMBER</label>
-              <input type="tel" name="phone_number" id="phone_number" />
+              <input
+                type="tel"
+                name="phone_number"
+                id="phone_number"
+                required
+                tabindex="4"
+              />
               <label for="confirm_password">CONFIRM PASSWORD</label>
               <input
                 type="password"
                 name="confirm_password"
                 id="confirm_password"
+                required
+                tabindex="6"
               />
             </div>
           </div>
